--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,19 @@
 {
-    "name": "jotali",
+    "name": "soundboard-client",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.5.1",
-        "@types/jest": "^29.5.5",
         "@types/node": "^20.7.0",
         "@types/react": "^18.2.23",
         "@types/react-dom": "^18.2.7",
         "axios": "^1.5.1",
+        "firebase": "^10.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "tsc": "^2.0.4",
         "typescript": "~3.7.2"
     },
@@ -39,6 +39,8 @@
         ]
     },
     "devDependencies": {
+        "@firebase/app-types": "^0.9.0",
+        "@types/firebase": "^3.2.1",
         "prettier": "3.0.3"
     }
 }
