--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.13",
+        "@mui/material": "^5.14.13",
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.5.1",
@@ -14,8 +18,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "^5.0.1",
-        "tsc": "^2.0.4",
-        "typescript": "~3.7.2"
+        "tsc": "^2.0.4"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -41,6 +44,7 @@
     "devDependencies": {
         "@firebase/app-types": "^0.9.0",
         "@types/firebase": "^3.2.1",
-        "prettier": "3.0.3"
+        "prettier": "3.0.3",
+        "typescript": "^5.2.2"
     }
 }
