--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@types/react": "^18.2.23",
         "@types/react-dom": "^18.2.7",
         "axios": "^1.5.1",
+        "csstype": "^3.1.2",
         "firebase": "^10.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -45,6 +46,6 @@
         "@firebase/app-types": "^0.9.0",
         "@types/firebase": "^3.2.1",
         "prettier": "3.0.3",
-        "typescript": "^5.2.2"
+        "typescript": "^4.9.5"
     }
 }
