--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@mui/icons-material": "^5.14.13",
+        "@mui/icons-material": "^5.14.18",
         "@mui/material": "^5.14.13",
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
@@ -18,6 +18,7 @@
         "firebase": "^10.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.18.0",
         "react-scripts": "^5.0.1",
         "tsc": "^2.0.4"
     },
