--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,30 +1,18 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": ["es6", "es2017", "dom", "dom.iterable", "esnext"],
+        "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
         "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "noEmit": true,
-        "jsx": "preserve",
-        "sourceMap": true,
-        "declaration": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "experimentalDecorators": true,
-        "incremental": true,
-        "noFallthroughCasesInSwitch": true,
         "isolatedModules": true,
-        "noImplicitAny": true,
-        "noImplicitThis": true,
-        "strictNullChecks": true
+        "jsx": "react-jsx",
+        "esModuleInterop": true
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "build"]
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.js", "src/**/*.jsx"],
+    "exclude": ["node_modules"]
 }
