--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "firebase-admin": "^12.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^5.9.20"
     },
